edit form close to done

--- a/src/components/horrorItems/horrorItem.css
+++ b/src/components/horrorItems/horrorItem.css
@@ -14,3 +14,11 @@ img {
 .save-btn {
     background-color: chartreuse;
 }
+
+.delete-btn {
+    background-color: crimson;
+}
+
+.edit-btn {
+    background-color: purple;
+}
